more copy paste, not really sure about the tensor network diagrams, CP one is a pain because I haven't talked about being able to do it with a diagonal core

--- a/background/background.tex
+++ b/background/background.tex
@@ -14,7 +14,7 @@ address problems in which we wish to map a \emph{sequence} of inputs
 wide range of tasks which can be framed in this way including statistical language modelling
 \autocite{Mikolov2012} (including machine translation \autocite{Cho2014}), speech recognition \autocite{Graves2006}, polyphonic music 
 modelling \autocite{Boulanger-Lewandowski2012}, music classification \autocite{Choi2016},
-image generation \autocite{Gregor2015} and more.
+image generation \autocite{Gregor2015}, automatic captioning \autocite{Vinyals2016, Xu2015}  and more.
 
 \subsubsection{Original Formulation}
 An RNN is able to maintain context over a sequence by transferring its hidden state from one
