--- a/proj_report_outline.tex
+++ b/proj_report_outline.tex
@@ -125,8 +125,9 @@
 \usepackage{soul}
 
 \usepackage{tikz}
+\usetikzlibrary{shapes}
 \tikzstyle{every node}=[circle, draw, fill=black,
-		   inner sep=0pt, minimum width=4pt]
+		   inner sep=0pt, minimum width=5pt]
 
 \usepackage{subcaption}
 
